<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="?attr/colorPrimary"
  tools:context=".MainFragment">

  <com.google.android.material.imageview.ShapeableImageView
    android:id="@+id/background"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginTop="200dp"
    android:src="@color/white"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:shapeAppearanceOverlay="@style/topRoundedImage" />

  <com.google.android.material.textview.MaterialTextView
    android:id="@+id/tv_app_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="40dp"
    android:text="@string/app_name"
    android:textColor="@color/white"
    android:textSize="40sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <com.google.android.material.textview.MaterialTextView
    android:id="@+id/tv_app_info"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:paddingHorizontal="16dp"
    android:text="@string/app_info"
    android:textAlignment="center"
    android:textColor="@color/white"
    android:textSize="20sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tv_app_name" />

  <com.google.android.material.textview.MaterialTextView
    android:id="@+id/tv_select_category"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:text="@string/select_hospital_category_text"
    android:textAlignment="center"
    android:textColor="@color/black"
    android:textSize="20sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="@id/background"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@id/background"
    app:layout_constraintVertical_bias="0.15" />

  <ImageView
    android:id="@+id/iv_hospital_icon"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:layout_marginTop="16dp"
    android:importantForAccessibility="no"
    android:src="@drawable/ic_round_local_hospital_24"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tv_select_category" />

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/dropdown_menu"
    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:hint="@string/desired_specialty"
    app:layout_constraintBottom_toBottomOf="@id/background"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/iv_hospital_icon"
    app:layout_constraintVertical_bias="0.1">

    <AutoCompleteTextView
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:inputType="none"
      tools:ignore="LabelFor" />

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.button.MaterialButton
    android:id="@+id/btn_find_hospital"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:enabled="false"
    android:text="@string/find_hospitals"
    app:layout_constraintBottom_toBottomOf="@id/background"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/dropdown_menu"
    app:layout_constraintVertical_bias="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>